maybeeeee one las change

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Ruluko&display=swap" rel="stylesheet" />
 </head>
 
-
 <body>
   <div class="date-switch">
 
@@ -56,7 +55,7 @@
         </button>
       </div>
     </div>
-
+    
     <section class="header">
       <h1>Weekly Todos</h1>
       <div class="header-buttons">
@@ -66,7 +65,7 @@
       </div>
     </section>
 
-    <section class="tasks" id="cards">
+    <section class="tasks" id="cards" >
       <h1 class="taskList">Task is Empty!</h1>
     </section>
 
@@ -76,12 +75,11 @@
       </div>
     </section>
 
-
-
+ 
+    
   </div>
-  <script src="/scripts/ui.js"></script>
-  <script src="/scripts/task.js"></script>
-  <script src="/scripts/storage.js"></script>
+
+  <script src="/scripts/classes.js"></script>
   <script src="/scripts/index.js"></script>
 </body>
 
