maybe the last change... or not...

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Todos</title>
+  <title>My Weekly Todos</title>
+  <link rel="shortcut icon" type="image/x-icon" href="icons/icon.svg" />
   <link rel="stylesheet" href="prod/css/main.min.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Ruluko&display=swap" rel="stylesheet" />
+
 </head>
 
 <body>
   <div class="date-switch">
-
     <div class="date-now">
       <h1 id="currentDate" class="date-now-header">
 
@@ -55,7 +56,7 @@
         </button>
       </div>
     </div>
-    
+
     <section class="header">
       <h1>Weekly Todos</h1>
       <div class="header-buttons">
@@ -65,7 +66,7 @@
       </div>
     </section>
 
-    <section class="tasks" id="cards" >
+    <section class="tasks" id="cards">
       <h1 class="taskList">Task is Empty!</h1>
     </section>
 
@@ -75,8 +76,8 @@
       </div>
     </section>
 
- 
-    
+
+
   </div>
 
   <script src="/scripts/classes.js"></script>
