--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7121R5X8KM"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-7121R5X8KM');
+        </script>
+  
   <title>My Weekly Todos</title>
   <link rel="shortcut icon" type="image/x-icon" href="icons/icon.svg" />
   <link rel="stylesheet" href="prod/css/main.min.css" />
